Revert "Changed unit test outputs to be placed into one folder"
This reverts commit cebbca7a85fdbfbe6169444ae3e9b8b93965a5e6.

--- a/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-A2B.ipynb
+++ b/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-A2B.ipynb
@@ -84,7 +84,7 @@
    },
    "outputs": [],
    "source": [
-    "import os, sys, shutil     # Standard Python modules for multiplatform OS-level functions\n",
+    "import os, sys           # Standard Python modules for multiplatform OS-level functions\n",
     "# First, we'll add the parent directory to the list of directories Python will check for modules.\n",
     "nrpy_dir_path = os.path.join(\"..\")\n",
     "if nrpy_dir_path not in sys.path:\n",
@@ -99,16 +99,8 @@
     "import reference_metric as rfm   # NRPy+: Reference metric support\n",
     "import cmdline_helper as cmd     # NRPy+: Multi-platform Python command-line interface\n",
     "\n",
-    "Ccodesdir = \"Start-to-Finish-UnitTests/A2B_UnitTest/\"\n",
-    "\n",
-    "# First remove C code output directory if it exists\n",
-    "# Courtesy https://stackoverflow.com/questions/303200/how-do-i-remove-delete-a-folder-that-is-not-empty\n",
-    "shutil.rmtree(Ccodesdir, ignore_errors=True)\n",
-    "# Then create a fresh directory\n",
-    "cmd.mkdir(Ccodesdir)\n",
-    "\n",
-    "outdir = os.path.join(Ccodesdir,\"output/\")\n",
-    "cmd.mkdir(outdir)\n",
+    "out_dir = \"Validation/\"\n",
+    "cmd.mkdir(out_dir)\n",
     "\n",
     "thismodule = \"Start_to_Finish_UnitTest-GiRaFFE_NRPy-A2B\"\n",
     "\n",
@@ -256,7 +248,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Output C function calculate_metric_gfs() to file Start-to-Finish-UnitTests/A2B_UnitTest/calculate_metric_gfs.h\n"
+      "Output C function calculate_metric_gfs() to file Validation/calculate_metric_gfs.h\n"
      ]
     }
    ],
@@ -298,7 +290,7 @@
     "desc = \"Calculate the metric gridfunctions\"\n",
     "name = \"calculate_metric_gfs\"\n",
     "outCfunction(\n",
-    "    outfile  = os.path.join(Ccodesdir,name+\".h\"), desc=desc, name=name,\n",
+    "    outfile  = os.path.join(out_dir,name+\".h\"), desc=desc, name=name,\n",
     "    params   =\"const paramstruct *restrict params,REAL *restrict xx[3],REAL *restrict auxevol_gfs\",\n",
     "    body     = fin.FD_outputC(\"returnstring\",metric_gfs_to_print,params=\"outCverbose=False\").replace(\"IDX4\",\"IDX4S\"),\n",
     "    loopopts=\"AllPoints,Read_xxs\")\n"
@@ -327,7 +319,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Output C function calculate_exact_BU() to file Start-to-Finish-UnitTests/A2B_UnitTest/calculate_exact_BU.h\n"
+      "Output C function calculate_exact_BU() to file Validation/calculate_exact_BU.h\n"
      ]
     }
    ],
@@ -341,7 +333,7 @@
     "desc = \"Calculate the exact magnetic field\"\n",
     "name = \"calculate_exact_BU\"\n",
     "outCfunction(\n",
-    "    outfile  = os.path.join(Ccodesdir,name+\".h\"), desc=desc, name=name,\n",
+    "    outfile  = os.path.join(out_dir,name+\".h\"), desc=desc, name=name,\n",
     "    params   =\"const paramstruct *restrict params,REAL *restrict xx[3],REAL *restrict auxevol_gfs\",\n",
     "    body     = fin.FD_outputC(\"returnstring\",B_analyticU_to_print,params=\"outCverbose=False\").replace(\"IDX4\",\"IDX4S\"),\n",
     "    loopopts=\"AllPoints,Read_xxs\")\n"
@@ -375,7 +367,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Output C function calculate_AD() to file Start-to-Finish-UnitTests/A2B_UnitTest/calculate_AD.h\n"
+      "Output C function calculate_AD() to file Validation/calculate_AD.h\n"
      ]
     }
    ],
@@ -389,7 +381,7 @@
     "desc = \"Calculate the vector potential\"\n",
     "name = \"calculate_AD\"\n",
     "outCfunction(\n",
-    "    outfile  = os.path.join(Ccodesdir,name+\".h\"), desc=desc, name=name,\n",
+    "    outfile  = os.path.join(out_dir,name+\".h\"), desc=desc, name=name,\n",
     "    params   =\"const paramstruct *restrict params,REAL *restrict xx[3],REAL *restrict out_gfs\",\n",
     "    body     = fin.FD_outputC(\"returnstring\",AD_to_print,params=\"outCverbose=False\").replace(\"IDX4\",\"IDX4S\"),\n",
     "    loopopts=\"AllPoints,Read_xxs\")\n",
@@ -400,7 +392,7 @@
     "# we're testing expect them to be.\n",
     "AD = ixp.declarerank1(\"AD\") # Make sure these aren't analytic expressions\n",
     "gammaDD = ixp.declarerank2(\"gammaDD\",\"sym01\")\n",
-    "A2B.GiRaFFE_NRPy_A2B(os.path.join(Ccodesdir,\"A2B\"),gammaDD,AD,BU)\n"
+    "A2B.GiRaFFE_NRPy_A2B(os.path.join(out_dir,\"A2B\"),gammaDD,AD,BU)\n"
    ]
   },
   {
@@ -432,7 +424,7 @@
     "# par.generate_Cparameters_Ccodes(os.path.join(out_dir))\n",
     "\n",
     "# Step 3.d.ii: Set free_parameters.h\n",
-    "with open(os.path.join(Ccodesdir,\"free_parameters.h\"),\"w\") as file:\n",
+    "with open(os.path.join(out_dir,\"free_parameters.h\"),\"w\") as file:\n",
     "    file.write(\"\"\"\n",
     "// Override parameter defaults with values based on command line arguments and NGHOSTS.\n",
     "// We'll use this grid. It has one point and one ghost zone.\n",
@@ -457,7 +449,7 @@
     "\\n\"\"\")\n",
     "\n",
     "# Generates declare_Cparameters_struct.h, set_Cparameters_default.h, and set_Cparameters[-SIMD].h\n",
-    "par.generate_Cparameters_Ccodes(os.path.join(Ccodesdir))"
+    "par.generate_Cparameters_Ccodes(os.path.join(out_dir))"
    ]
   },
   {
@@ -469,7 +461,7 @@
     "# Step 2: `A2B_unit_test.c`: The Main C Code \\[Back to [top](#toc)\\]\n",
     "$$\\label{mainc}$$\n",
     "\n",
-    "Now that we have our vector potential and analytic magnetic field to compare against, we will start writing our unit test. We'll also import common C functionality, define `REAL`, the number of ghost zones, and the faces, and set the standard macros for NRPy+ style memory access. Once we are done with preliminaries and defining data on our grid, we will compare the output from `calculate_exact_BU()` against `driver_A_to_B` to confirm that our error converges to zero."
+    "Now that we have our vector potential and analytic magnetic field to compare against, we will start writing our unit test. We'll also import common C functionality, define `REAL`, the number of ghost zones, and the faces, and set the standard macros for NRPy+ style memory access."
    ]
   },
   {
@@ -488,12 +480,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing Start-to-Finish-UnitTests/A2B_UnitTest//A2B_unit_test.c\n"
+      "Writing Validation//A2B_unit_test.c\n"
      ]
     }
    ],
    "source": [
-    "%%writefile $Ccodesdir/A2B_unit_test.c\n",
+    "%%writefile $out_dir/A2B_unit_test.c\n",
     "\n",
     "// These are common packages that we are likely to need.\n",
     "#include \"stdio.h\"\n",
@@ -542,12 +534,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to Start-to-Finish-UnitTests/A2B_UnitTest//A2B_unit_test.c\n"
+      "Appending to Validation//A2B_unit_test.c\n"
      ]
     }
    ],
    "source": [
-    "%%writefile -a $Ccodesdir/A2B_unit_test.c\n",
+    "%%writefile -a $out_dir/A2B_unit_test.c\n",
     "\n",
     "// Let's also #define the NRPy+ gridfunctions\n",
     "#define AD0GF 0\n",
@@ -593,12 +585,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to Start-to-Finish-UnitTests/A2B_UnitTest//A2B_unit_test.c\n"
+      "Appending to Validation//A2B_unit_test.c\n"
      ]
     }
    ],
    "source": [
-    "%%writefile -a $Ccodesdir/A2B_unit_test.c\n",
+    "%%writefile -a $out_dir/A2B_unit_test.c\n",
     "\n",
     "#include \"A2B/driver_AtoB.h\" // This file contains both functions we need.\n",
     "\n",
@@ -631,12 +623,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to Start-to-Finish-UnitTests/A2B_UnitTest//A2B_unit_test.c\n"
+      "Appending to Validation//A2B_unit_test.c\n"
      ]
     }
    ],
    "source": [
-    "%%writefile -a $Ccodesdir/A2B_unit_test.c\n",
+    "%%writefile -a $out_dir/A2B_unit_test.c\n",
     "\n",
     "int main(int argc, const char *argv[]) {\n",
     "    paramstruct params;\n",
@@ -766,16 +758,32 @@
     "    char filename[100];\n",
     "    sprintf(filename,\"out%d-numer.txt\",Nxx0);\n",
     "    FILE *out2D = fopen(filename, \"w\");\n",
-    "    for(int i2=0;i2<Nxx_plus_2NGHOSTS2;i2++) for(int i1=0;i1<Nxx_plus_2NGHOSTS1;i1++) for(int i0=0;i0<Nxx_plus_2NGHOSTS0;i0++) {\n",
-    "        // We print the difference between approximate and exact numbers.\n",
-    "        fprintf(out2D,\"%.16e\\t%.16e\\t%.16e %e %e %e\\n\",\n",
-    "                auxevol_gfs[IDX4S(B_ANALYTICU0GF,i0,i1,i2)]-auxevol_gfs[IDX4S(BU0GF,i0,i1,i2)],\n",
-    "                auxevol_gfs[IDX4S(B_ANALYTICU1GF,i0,i1,i2)]-auxevol_gfs[IDX4S(BU1GF,i0,i1,i2)],\n",
-    "                auxevol_gfs[IDX4S(B_ANALYTICU2GF,i0,i1,i2)]-auxevol_gfs[IDX4S(BU2GF,i0,i1,i2)],\n",
-    "                xx[0][i0],xx[1][i1],xx[2][i2]\n",
-    "                );\n",
+    "    if(do_quadratic_test || is_gaussian) {\n",
+    "        for(int i2=0;i2<Nxx_plus_2NGHOSTS2;i2++) for(int i1=0;i1<Nxx_plus_2NGHOSTS1;i1++) for(int i0=0;i0<Nxx_plus_2NGHOSTS0;i0++) {\n",
+    "            // We print the difference between approximate and exact numbers.\n",
+    "            fprintf(out2D,\"%.16e\\t%.16e\\t%.16e %e %e %e\\n\",\n",
+    "                    auxevol_gfs[IDX4S(B_ANALYTICU0GF,i0,i1,i2)]-auxevol_gfs[IDX4S(BU0GF,i0,i1,i2)],\n",
+    "                    auxevol_gfs[IDX4S(B_ANALYTICU1GF,i0,i1,i2)]-auxevol_gfs[IDX4S(BU1GF,i0,i1,i2)],\n",
+    "                    auxevol_gfs[IDX4S(B_ANALYTICU2GF,i0,i1,i2)]-auxevol_gfs[IDX4S(BU2GF,i0,i1,i2)],\n",
+    "                    xx[0][i0],xx[1][i1],xx[2][i2]\n",
+    "                    );\n",
+    "        }\n",
     "    }\n",
-    "fclose(out2D);\n",
+    "    else {\n",
+    "        for(int i2=0;i2<Nxx_plus_2NGHOSTS2;i2++) for(int i1=0;i1<Nxx_plus_2NGHOSTS1;i1++) for(int i0=0;i0<Nxx_plus_2NGHOSTS0;i0++) {\n",
+    "            if (i0%2==0 && i1%2==0 && i2%2==0) {\n",
+    "                // We print the difference between approximate and exact numbers.\n",
+    "                fprintf(out2D,\"%.16e\\t%.16e\\t%.16e %e %e %e\\n\",\n",
+    "                        auxevol_gfs[IDX4S(B_ANALYTICU0GF,i0,i1,i2)]-auxevol_gfs[IDX4S(BU0GF,i0,i1,i2)],\n",
+    "                        auxevol_gfs[IDX4S(B_ANALYTICU1GF,i0,i1,i2)]-auxevol_gfs[IDX4S(BU1GF,i0,i1,i2)],\n",
+    "                        auxevol_gfs[IDX4S(B_ANALYTICU2GF,i0,i1,i2)]-auxevol_gfs[IDX4S(BU2GF,i0,i1,i2)],\n",
+    "                        xx[0][i0],xx[1][i1],xx[2][i2]\n",
+    "                       );\n",
+    "            }\n",
+    "        }\n",
+    "\n",
+    "    }\n",
+    "    fclose(out2D);\n",
     "}\n"
    ]
   },
@@ -811,19 +819,19 @@
       "Now compiling, should take ~2 seconds...\n",
       "\n",
       "Compiling executable...\n",
-      "(EXEC): Executing `gcc -Ofast -fopenmp -march=native -funroll-loops Start-to-Finish-UnitTests/A2B_UnitTest/A2B_unit_test.c -o Start-to-Finish-UnitTests/A2B_UnitTest/output/A2B_unit_test -lm`...\n",
-      "(BENCH): Finished executing in 0.6097359657287598 seconds.\n",
+      "(EXEC): Executing `gcc -Ofast -fopenmp -march=native -funroll-loops Validation/A2B_unit_test.c -o Validation/A2B_unit_test -lm`...\n",
+      "(BENCH): Finished executing in 0.40970373153686523 seconds.\n",
       "Finished compilation.\n",
-      "Finished in 0.6173965930938721 seconds.\n",
+      "Finished in 0.41938018798828125 seconds.\n",
       "\n",
       "\n",
       "Now running...\n",
       "\n",
-      "(EXEC): Executing `taskset -c 0,1,2,3,4,5 ./A2B_unit_test 1 1 1 1`...\n",
-      "(BENCH): Finished executing in 0.21168088912963867 seconds.\n",
-      "(EXEC): Executing `taskset -c 0,1,2,3,4,5 ./A2B_unit_test 7 7 7 1`...\n",
-      "(BENCH): Finished executing in 0.20528268814086914 seconds.\n",
-      "Finished in 0.4351034164428711 seconds.\n",
+      "(EXEC): Executing `taskset -c 0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15 ./Validation/A2B_unit_test 1 1 1 1`...\n",
+      "(BENCH): Finished executing in 0.20781230926513672 seconds.\n",
+      "(EXEC): Executing `taskset -c 0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15 ./Validation/A2B_unit_test 7 7 7 1`...\n",
+      "(BENCH): Finished executing in 0.2084641456604004 seconds.\n",
+      "Finished in 0.42977237701416016 seconds.\n",
       "\n",
       "\n"
      ]
@@ -834,19 +842,16 @@
     "\n",
     "print(\"Now compiling, should take ~2 seconds...\\n\")\n",
     "start = time.time()\n",
-    "cmd.C_compile(os.path.join(Ccodesdir,\"A2B_unit_test.c\"), os.path.join(outdir,\"A2B_unit_test\"))\n",
+    "cmd.C_compile(os.path.join(out_dir,\"A2B_unit_test.c\"), os.path.join(out_dir,\"A2B_unit_test\"))\n",
     "end = time.time()\n",
     "print(\"Finished in \"+str(end-start)+\" seconds.\\n\\n\")\n",
     "\n",
-    "# Change to output directory\n",
-    "os.chdir(outdir)\n",
-    "\n",
     "print(\"Now running...\\n\")\n",
     "start = time.time()\n",
-    "cmd.Execute(os.path.join(\"A2B_unit_test\"),\"1 1 1 1\")\n",
+    "cmd.Execute(os.path.join(\"Validation\",\"A2B_unit_test\"),\"1 1 1 1\")\n",
     "if Use_Gaussian_Data:\n",
     "    # To do a convergence test, we'll also need a second grid with twice the resolution.\n",
-    "    cmd.Execute(os.path.join(\"A2B_unit_test\"),\"7 7 7 1\")\n",
+    "    cmd.Execute(os.path.join(\"Validation\",\"A2B_unit_test\"),\"7 7 7 1\")\n",
     "end = time.time()\n",
     "print(\"Finished in \"+str(end-start)+\" seconds.\\n\\n\")\n"
    ]
@@ -913,7 +918,6 @@
     "\n",
     "Data1 = np.loadtxt(\"out1-numer.txt\")\n",
     "Data2 = np.loadtxt(\"out7-numer.txt\")\n",
-    "\"A\"\n",
     "\n",
     "# print(\"Convergence test: All should be approximately 2\\n\")\n",
     "# convergence = np.log(np.divide(np.abs(Data1),np.abs(Data2)))/np.log(2)\n",
@@ -1062,17 +1066,13 @@
    ],
    "source": [
     "import cmdline_helper as cmd    # NRPy+: Multi-platform Python command-line interface\n",
-    "\n",
-    "# Change to NRPy directory\n",
-    "os.chdir(\"../../../\")\n",
-    "\n",
     "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-A2B\",location_of_template_file=os.path.join(\"..\"))"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
    "name": "python3"
   },
@@ -1086,7 +1086,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
