--- a/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-C2P_P2C.ipynb
+++ b/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-C2P_P2C.ipynb
@@ -97,16 +97,8 @@
     "import indexedexp as ixp         # NRPy+: Symbolic indexed expression (e.g., tensors, vectors, etc.) support\n",
     "import cmdline_helper as cmd     # NRPy+: Multi-platform Python command-line interface\n",
     "\n",
-    "Ccodesdir = \"Start-to-Finish-UnitTests/C2P_P2C_UnitTest/\"\n",
-    "\n",
-    "# First remove C code output directory if it exists\n",
-    "# Courtesy https://stackoverflow.com/questions/303200/how-do-i-remove-delete-a-folder-that-is-not-empty\n",
-    "shutil.rmtree(Ccodesdir, ignore_errors=True)\n",
-    "# Then create a fresh directory\n",
-    "cmd.mkdir(Ccodesdir)\n",
-    "\n",
-    "outdir = os.path.join(Ccodesdir,\"output/\")\n",
-    "cmd.mkdir(outdir)\n",
+    "out_dir = \"Validation/\"\n",
+    "cmd.mkdir(out_dir)\n",
     "\n",
     "thismodule = \"Start_to_Finish_UnitTest-GiRaFFE_NRPy-C2P_P2C\"\n",
     "\n",
@@ -148,7 +140,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Output C function GiRaFFE_NRPy_cons_to_prims() to file Start-to-Finish-UnitTests/C2P_P2C_UnitTest/GiRaFFE_NRPy_cons_to_prims.h\n"
+      "Output C function GiRaFFE_NRPy_cons_to_prims() to file Validation/GiRaFFE_NRPy_cons_to_prims.h\n"
      ]
     }
    ],
@@ -168,7 +160,7 @@
     "desc = \"Apply fixes to \\tilde{S}_i and recompute the velocity to match with current sheet prescription.\"\n",
     "name = \"GiRaFFE_NRPy_cons_to_prims\"\n",
     "outCfunction(\n",
-    "    outfile  = os.path.join(Ccodesdir,name+\".h\"), desc=desc, name=name,\n",
+    "    outfile  = os.path.join(out_dir,name+\".h\"), desc=desc, name=name,\n",
     "    params   =\"const paramstruct *params,REAL *xx[3],REAL *auxevol_gfs,REAL *in_gfs\",\n",
     "    body     = fin.FD_outputC(\"returnstring\",values_to_print,params=\"outCverbose=False\").replace(\"IDX4\",\"IDX4S\"),\n",
     "    loopopts =\"AllPoints,Read_xxs\")\n"
@@ -203,7 +195,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Output C function GiRaFFE_NRPy_prims_to_cons() to file Start-to-Finish-UnitTests/C2P_P2C_UnitTest/GiRaFFE_NRPy_prims_to_cons.h\n"
+      "Output C function GiRaFFE_NRPy_prims_to_cons() to file Validation/GiRaFFE_NRPy_prims_to_cons.h\n"
      ]
     }
    ],
@@ -223,7 +215,7 @@
     "desc = \"Recompute StildeD after current sheet fix to Valencia 3-velocity to ensure consistency between conservative & primitive variables.\"\n",
     "name = \"GiRaFFE_NRPy_prims_to_cons\"\n",
     "outCfunction(\n",
-    "    outfile  = os.path.join(Ccodesdir,name+\".h\"), desc=desc, name=name,\n",
+    "    outfile  = os.path.join(out_dir,name+\".h\"), desc=desc, name=name,\n",
     "    params   =\"const paramstruct *params,REAL *xx[3],REAL *auxevol_gfs,REAL *in_gfs\",\n",
     "    body     = fin.FD_outputC(\"returnstring\",values_to_print,params=\"outCverbose=False\").replace(\"IDX4\",\"IDX4S\"),\n",
     "    loopopts =\"AllPoints\")\n"
@@ -271,7 +263,7 @@
     "                     ]\n",
     "\n",
     "for i in range(len(original_file_url)):\n",
-    "    original_file_path = os.path.join(Ccodesdir,original_file_name[i])\n",
+    "    original_file_path = os.path.join(out_dir,original_file_name[i])\n",
     "\n",
     "    # Then download the original IllinoisGRMHD source code\n",
     "    # We try it here in a couple of ways in an attempt to keep\n",
@@ -318,7 +310,7 @@
     "# par.generate_Cparameters_Ccodes(os.path.join(out_dir))\n",
     "\n",
     "# Step 3.d.ii: Set free_parameters.h\n",
-    "with open(os.path.join(Ccodesdir,\"free_parameters.h\"),\"w\") as file:\n",
+    "with open(os.path.join(out_dir,\"free_parameters.h\"),\"w\") as file:\n",
     "    file.write(\"\"\"\n",
     "// Set free-parameter values.\n",
     "\n",
@@ -349,7 +341,7 @@
     "\\n\"\"\")\n",
     "\n",
     "# Generates declare_Cparameters_struct.h, set_Cparameters_default.h, and set_Cparameters[-SIMD].h\n",
-    "par.generate_Cparameters_Ccodes(os.path.join(Ccodesdir))"
+    "par.generate_Cparameters_Ccodes(os.path.join(out_dir))"
    ]
   },
   {
@@ -382,19 +374,19 @@
     "#include \"cctk_Arguments.h\"\n",
     "#include \"cctk_Parameters.h\"\n",
     "#include \"Symmetry.h\"\n",
-    "with open(os.path.join(Ccodesdir,\"cctk.h\"),\"w\") as file:\n",
+    "with open(os.path.join(out_dir,\"cctk.h\"),\"w\") as file:\n",
     "    file.write(\"\"\"//\"\"\")\n",
     "\n",
-    "with open(os.path.join(Ccodesdir,\"cctk_Arguments.h\"),\"w\") as file:\n",
+    "with open(os.path.join(out_dir,\"cctk_Arguments.h\"),\"w\") as file:\n",
     "    file.write(\"\"\"#define DECLARE_CCTK_ARGUMENTS //\n",
     "#define CCTK_ARGUMENTS void\n",
     "\"\"\")\n",
     "\n",
-    "with open(os.path.join(Ccodesdir,\"cctk_Parameters.h\"),\"w\") as file:\n",
+    "with open(os.path.join(out_dir,\"cctk_Parameters.h\"),\"w\") as file:\n",
     "    file.write(\"\"\"#define DECLARE_CCTK_PARAMETERS //\n",
     "\"\"\")\n",
     "\n",
-    "with open(os.path.join(Ccodesdir,\"Symmetry.h\"),\"w\") as file:\n",
+    "with open(os.path.join(out_dir,\"Symmetry.h\"),\"w\") as file:\n",
     "    file.write(\"\"\"//\"\"\")\n"
    ]
   },
@@ -408,7 +400,7 @@
     "\n",
     "$$\\label{mainc}$$\n",
     "\n",
-    "Now that we have our vector potential and analytic magnetic field to compare against, we will start writing our unit test. We'll also import common C functionality, define `REAL`, the number of ghost zones, and the faces, and set the standard macros for NRPy+ style memory access. After all the necessary preliminary C code, we then compare the output of the original GiRaFFE's `GiRaFFE_conserv_to_prims_FFE()` function to NRPy's `GiRaFFE_NRPy_cons_to_prims()` and `GiRaFFE_NRPy_prims_to_cons()` functions, when applied to the Poynting flux and valencia velocity."
+    "Now that we have our vector potential and analytic magnetic field to compare against, we will start writing our unit test. We'll also import common C functionality, define `REAL`, the number of ghost zones, and the faces, and set the standard macros for NRPy+ style memory access."
    ]
   },
   {
@@ -427,12 +419,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing Start-to-Finish-UnitTests/C2P_P2C_UnitTest//C2P_P2C_unit_test.C\n"
+      "Writing Validation//C2P_P2C_unit_test.C\n"
      ]
     }
    ],
    "source": [
-    "%%writefile $Ccodesdir/C2P_P2C_unit_test.C\n",
+    "%%writefile $out_dir/C2P_P2C_unit_test.C\n",
     "// These are common packages that we are likely to need.\n",
     "#include \"stdio.h\"\n",
     "#include \"stdlib.h\"\n",
@@ -709,11 +701,11 @@
      "text": [
       "Now compiling, should take ~2 seconds...\n",
       "\n",
-      "Finished in 0.6900792121887207 seconds.\n",
+      "Finished in 0.48241138458251953 seconds.\n",
       "\n",
       "\n",
-      "(EXEC): Executing `taskset -c 0,1,2,3,4,5 ./C2P_P2C_unit_test `...\n",
-      "(BENCH): Finished executing in 0.21454191207885742 seconds.\n"
+      "(EXEC): Executing `taskset -c 0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15 ./C2P_P2C_unit_test `...\n",
+      "(BENCH): Finished executing in 0.20868754386901855 seconds.\n"
      ]
     }
    ],
@@ -725,14 +717,13 @@
     "start = time.time()\n",
     "# Can't use C here; must use C++\n",
     "# This command should work on all systems:\n",
-    "!g++ -Ofast -fopenmp -march=native -funroll-loops Start-to-Finish-UnitTests/C2P_P2C_UnitTest/C2P_P2C_unit_test.C -o Start-to-Finish-UnitTests/C2P_P2C_UnitTest/output/C2P_P2C_unit_test -lm\n",
+    "!g++ -Ofast -fopenmp -march=native -funroll-loops Validation/C2P_P2C_unit_test.C -o Validation/C2P_P2C_unit_test -lm\n",
     "end = time.time()\n",
     "print(\"Finished in \"+str(end-start)+\" seconds.\\n\\n\")\n",
     "\n",
-    "# Change to output directory\n",
-    "os.chdir(outdir)\n",
-    "\n",
-    "cmd.Execute(os.path.join(\"C2P_P2C_unit_test\"),file_to_redirect_stdout=os.path.join(results_file))"
+    "os.chdir(os.path.join(\"Validation\"))\n",
+    "cmd.Execute(os.path.join(\"C2P_P2C_unit_test\"),file_to_redirect_stdout=os.path.join(results_file))\n",
+    "os.chdir(os.path.join(\"..\"))"
    ]
   },
   {
@@ -753,24 +744,14 @@
      "shell.execute_reply": "2020-12-17T02:17:18.008887Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[15.9, 15.8, 16.5]\n",
-      "[16.3, 16.4, 16.1]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
-    "with open(results_file,\"r\") as file:\n",
+    "with open(os.path.join(out_dir,results_file),\"r\") as file:\n",
     "    for i in range(2):\n",
     "        output = file.readline()\n",
     "        substrings = output.split(\", \")\n",
     "        sda = [float(i) for i in substrings]\n",
-    "        print(sda)\n",
     "        enough_digits = np.array(sda)>14\n",
     "        if not enough_digits.all():\n",
     "            sys.exit(1)"
@@ -906,30 +887,16 @@
      "shell.execute_reply": "2020-12-17T02:17:18.012478Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Created Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-C2P_P2C.tex, and\n",
-      "    compiled LaTeX file to PDF file Tutorial-Start_to_Finish_UnitTest-\n",
-      "    GiRaFFE_NRPy-C2P_P2C.pdf\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import cmdline_helper as cmd    # NRPy+: Multi-platform Python command-line interface\n",
-    "\n",
-    "# Change to NRPy directory\n",
-    "os.chdir(\"../../../\")\n",
-    "\n",
-    "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-C2P_P2C\",location_of_template_file=os.path.join(\"..\"))"
+    "# cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-C2P_P2C\",location_of_template_file=os.path.join(\"..\"))"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
    "name": "python3"
   },
@@ -943,7 +910,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
