--- a/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Stilde_flux.ipynb
+++ b/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Stilde_flux.ipynb
@@ -114,16 +114,8 @@
     "import reference_metric as rfm   # NRPy+: Reference metric support\n",
     "import cmdline_helper as cmd     # NRPy+: Multi-platform Python command-line interface\n",
     "\n",
-    "Ccodesdir = \"Start-to-Finish-UnitTests/Stilde_flux_UnitTest/\"\n",
-    "\n",
-    "# First remove C code output directory if it exists\n",
-    "# Courtesy https://stackoverflow.com/questions/303200/how-do-i-remove-delete-a-folder-that-is-not-empty\n",
-    "shutil.rmtree(Ccodesdir, ignore_errors=True)\n",
-    "# Then create a fresh directory\n",
-    "cmd.mkdir(Ccodesdir)\n",
-    "\n",
-    "outdir = os.path.join(Ccodesdir,\"output/\")\n",
-    "cmd.mkdir(outdir)\n",
+    "out_dir  = \"Validation\"\n",
+    "cmd.mkdir(out_dir)\n",
     "\n",
     "thismodule = \"Start_to_Finish_UnitTest-GiRaFFE_NRPy-Stilde_flux\"\n",
     "\n",
@@ -133,9 +125,7 @@
     "# to declare them as C parameters in NRPy+. We will denote this with the _face infix/suffix.\n",
     "alpha_face,gammadet_face = gri.register_gridfunctions(\"AUXEVOL\",[\"alpha_face\",\"gammadet_face\"])\n",
     "gamma_faceDD = ixp.register_gridfunctions_for_single_rank2(\"AUXEVOL\",\"gamma_faceDD\",\"sym01\")\n",
-    "gamma_faceUU = ixp.register_gridfunctions_for_single_rank2(\"AUXEVOL\",\"gamma_faceUU\",\"sym01\")\n",
     "beta_faceU = ixp.register_gridfunctions_for_single_rank1(\"AUXEVOL\",\"beta_faceU\")\n",
-    "phi_face = gri.register_gridfunctions(\"AUXEVOL\",\"phi_face\") # Needed only for ADM-BSSN-ADM workaround\n",
     "\n",
     "# We'll need some more gridfunctions, now, to represent the reconstructions of BU and ValenciavU\n",
     "# on the right and left faces\n",
@@ -187,7 +177,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Output C function calculate_Stilde_rhsD() to file Start-to-Finish-UnitTests/Stilde_flux_UnitTest/RHSs/calculate_Stilde_rhsD.h\n"
+      "Output C function calculate_Stilde_rhsD() to file Validation/RHSs/calculate_Stilde_rhsD.h\n"
      ]
     }
    ],
@@ -196,12 +186,11 @@
     "# In practice, the C functions should only loop over the interior; here, however, we can loop over\n",
     "# all points and set fewer parameters.\n",
     "subdir = \"RHSs\"\n",
-    "cmd.mkdir(os.path.join(Ccodesdir,subdir))\n",
+    "cmd.mkdir(os.path.join(out_dir,subdir))\n",
     "\n",
-    "Sf.generate_C_code_for_Stilde_flux(os.path.join(Ccodesdir,subdir),True, alpha_face, gamma_faceDD, beta_faceU,\n",
+    "Sf.generate_C_code_for_Stilde_flux(os.path.join(out_dir,subdir),True, alpha_face, gamma_faceDD, beta_faceU,\n",
     "                                   Valenciav_rU, B_rU, Valenciav_lU, B_lU,\n",
     "                                   Stilde_flux_HLLED, sqrt4pi,\n",
-    "                                   gamma_faceUU=gamma_faceUU,phi_face=phi_face,\n",
     "                                   outCparams = \"outCverbose=False,CSE_sorting=none\",write_cmax_cmin=True)"
    ]
   },
@@ -237,7 +226,7 @@
     "# par.generate_Cparameters_Ccodes(os.path.join(out_dir))\n",
     "\n",
     "# Step 3.d.ii: Set free_parameters.h\n",
-    "with open(os.path.join(Ccodesdir,\"free_parameters.h\"),\"w\") as file:\n",
+    "with open(os.path.join(out_dir,\"free_parameters.h\"),\"w\") as file:\n",
     "    file.write(\"\"\"\n",
     "// Set free-parameter values.\n",
     "params.Nxx0 = 1;\n",
@@ -264,10 +253,11 @@
     "\n",
     "// Standard GRFFE parameters:\n",
     "params.GAMMA_SPEED_LIMIT = 2000.0;\n",
+    "\n",
     "\\n\"\"\")\n",
     "\n",
     "# Generates declare_Cparameters_struct.h, set_Cparameters_default.h, and set_Cparameters[-SIMD].h\n",
-    "par.generate_Cparameters_Ccodes(os.path.join(Ccodesdir))"
+    "par.generate_Cparameters_Ccodes(os.path.join(out_dir))"
    ]
   },
   {
@@ -308,7 +298,7 @@
     "                     ]\n",
     "\n",
     "for i in range(len(original_file_url)):\n",
-    "    original_file_path = os.path.join(Ccodesdir,original_file_name[i])\n",
+    "    original_file_path = os.path.join(out_dir,original_file_name[i])\n",
     "\n",
     "    # Then download the original IllinoisGRMHD source code\n",
     "    # We try it here in a couple of ways in an attempt to keep\n",
@@ -333,9 +323,7 @@
     "\n",
     "$$\\label{mainc}$$\n",
     "\n",
-    "Now that we have our vector potential and analytic magnetic field to compare against, we will start writing our unit test. We'll also import common C functionality, define `REAL`, the number of ghost zones, and the faces, and set the standard macros for NRPy+ style memory access. Now we can write our C code. First, we will import our usual libraries and define the various constants and macros we need, taking care to imitate CCTK functionality wherever necessary. In the main function, we will fill all relevant arrays with (appropriate) random values. That is, if a certain gridfunction should never be negative, we will make sure to only generate positive numbers for it. We must also contend with the fact that in NRPy+, we chose to use the Valencia 3-velocity $v^i_{(n)}$, while in ETK, we used  the drift velocity $v^i$; the two are related by $$v^i = \\alpha v^i_{(n)} - \\beta^i.$$\n",
-    "\n",
-    "After all preliminaries and setting data over the entire grid, we compare the numerical between NRPy_GiRaFFE's `calculate_Stilde_rhsD()` function and ETK_GiRaFFE's `GRFFE__S_i__flux()` function."
+    "Now that we have our vector potential and analytic magnetic field to compare against, we will start writing our unit test. We'll also import common C functionality, define `REAL`, the number of ghost zones, and the faces, and set the standard macros for NRPy+ style memory access.Now we can write our C code. First, we will import our usual libraries and define the various constants and macros we need, taking care to imitate CCTK functionality wherever necessary. In the main function, we will fill all relevant arrays with (appropriate) random values. That is, if a certain gridfunction should never be negative, we will make sure to only generate positive numbers for it. We must also contend with the fact that in NRPy+, we chose to use the Valencia 3-velocity $v^i_{(n)}$, while in ETK, we used  the drift velocity $v^i$; the two are related by $$v^i = \\alpha v^i_{(n)} - \\beta^i.$$"
    ]
   },
   {
@@ -354,12 +342,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing Start-to-Finish-UnitTests/Stilde_flux_UnitTest//Stilde_flux_unit_test.C\n"
+      "Overwriting Validation/Stilde_flux_unit_test.C\n"
      ]
     }
    ],
    "source": [
-    "%%writefile $Ccodesdir/Stilde_flux_unit_test.C\n",
+    "%%writefile $out_dir/Stilde_flux_unit_test.C\n",
     "// These are common packages that we are likely to need.\n",
     "#include \"stdio.h\"\n",
     "#include \"stdlib.h\"\n",
@@ -383,44 +371,37 @@
     "\n",
     "// Let's also #define the NRPy+ gridfunctions\n",
     "#define ALPHA_FACEGF 0\n",
-    "#define PHI_FACEGF 1\n",
-    "#define GAMMA_FACEDD00GF 2\n",
-    "#define GAMMA_FACEDD01GF 3\n",
-    "#define GAMMA_FACEDD02GF 4\n",
-    "#define GAMMA_FACEDD11GF 5\n",
-    "#define GAMMA_FACEDD12GF 6\n",
-    "#define GAMMA_FACEDD22GF 7\n",
-    "#define BETA_FACEU0GF 8\n",
-    "#define BETA_FACEU1GF 9\n",
-    "#define BETA_FACEU2GF 10\n",
-    "#define VALENCIAV_RU0GF 11\n",
-    "#define VALENCIAV_RU1GF 12\n",
-    "#define VALENCIAV_RU2GF 13\n",
-    "#define B_RU0GF 14\n",
-    "#define B_RU1GF 15\n",
-    "#define B_RU2GF 16\n",
-    "#define VALENCIAV_LU0GF 17\n",
-    "#define VALENCIAV_LU1GF 18\n",
-    "#define VALENCIAV_LU2GF 19\n",
-    "#define B_LU0GF 20\n",
-    "#define B_LU1GF 21\n",
-    "#define B_LU2GF 22\n",
-    "#define CMAX_XGF 23\n",
-    "#define CMIN_XGF 24\n",
-    "#define CMAX_YGF 25\n",
-    "#define CMIN_YGF 26\n",
-    "#define CMAX_ZGF 27\n",
-    "#define CMIN_ZGF 28\n",
-    "#define GAMMA_FACEUU00GF 29\n",
-    "#define GAMMA_FACEUU01GF 30\n",
-    "#define GAMMA_FACEUU02GF 31\n",
-    "#define GAMMA_FACEUU11GF 32\n",
-    "#define GAMMA_FACEUU12GF 33\n",
-    "#define GAMMA_FACEUU22GF 34\n",
-    "#define STILDE_FLUX_HLLED0GF 35\n",
-    "#define STILDE_FLUX_HLLED1GF 36\n",
-    "#define STILDE_FLUX_HLLED2GF 37\n",
-    "#define NUM_AUXEVOL_GFS 38\n",
+    "#define GAMMA_FACEDD00GF 1\n",
+    "#define GAMMA_FACEDD01GF 2\n",
+    "#define GAMMA_FACEDD02GF 3\n",
+    "#define GAMMA_FACEDD11GF 4\n",
+    "#define GAMMA_FACEDD12GF 5\n",
+    "#define GAMMA_FACEDD22GF 6\n",
+    "#define BETA_FACEU0GF 7\n",
+    "#define BETA_FACEU1GF 8\n",
+    "#define BETA_FACEU2GF 9\n",
+    "#define VALENCIAV_RU0GF 10\n",
+    "#define VALENCIAV_RU1GF 11\n",
+    "#define VALENCIAV_RU2GF 12\n",
+    "#define B_RU0GF 13\n",
+    "#define B_RU1GF 14\n",
+    "#define B_RU2GF 15\n",
+    "#define VALENCIAV_LU0GF 16\n",
+    "#define VALENCIAV_LU1GF 17\n",
+    "#define VALENCIAV_LU2GF 18\n",
+    "#define B_LU0GF 19\n",
+    "#define B_LU1GF 20\n",
+    "#define B_LU2GF 21\n",
+    "#define CMAX_XGF 22\n",
+    "#define CMIN_XGF 23\n",
+    "#define CMAX_YGF 24\n",
+    "#define CMIN_YGF 25\n",
+    "#define CMAX_ZGF 26\n",
+    "#define CMIN_ZGF 27\n",
+    "#define STILDE_FLUX_HLLED0GF 28\n",
+    "#define STILDE_FLUX_HLLED1GF 29\n",
+    "#define STILDE_FLUX_HLLED2GF 30\n",
+    "#define NUM_AUXEVOL_GFS 31\n",
     "\n",
     "#define STILDED0GF 0\n",
     "#define STILDED1GF 1\n",
@@ -532,7 +513,6 @@
     "            METRIC_LAP_PSI4[PSI4] = METRIC_LAP_PSI4[PSI2]*METRIC_LAP_PSI4[PSI2];\n",
     "            const double Psim4 = 1.0/METRIC_LAP_PSI4[PSI4];\n",
     "            METRIC_LAP_PSI4[PSIM4] = Psim4;\n",
-    "            auxevol_gfs[IDX4S(PHI_FACEGF, i0, i1, i2)] = 0.25 * log(METRIC_LAP_PSI4[PSI4]);\n",
     "            // Copied from the ETK implementation\n",
     "                CCTK_REAL gtxxL = gammaDD00*Psim4;\n",
     "                CCTK_REAL gtxyL = gammaDD01*Psim4;\n",
@@ -566,12 +546,6 @@
     "            FACEVAL[GUPXX] = ( gtyyL * gtzzL - gtyzL * gtyzL )/gtijdet;\n",
     "            FACEVAL[GUPYY] = ( gtxxL * gtzzL - gtxzL * gtxzL )/gtijdet;\n",
     "            FACEVAL[GUPZZ] = ( gtxxL * gtyyL - gtxyL * gtxyL )/gtijdet;\n",
-    "           auxevol_gfs[IDX4S(GAMMA_FACEUU00GF, i0,i1,i2)] = tmp6*(gammaDD11*gammaDD22 - ((gammaDD12)*(gammaDD12)));\n",
-    "           auxevol_gfs[IDX4S(GAMMA_FACEUU01GF, i0,i1,i2)] = tmp6*(-gammaDD01*gammaDD22 + gammaDD02*gammaDD12);\n",
-    "           auxevol_gfs[IDX4S(GAMMA_FACEUU02GF, i0,i1,i2)] = tmp6*(gammaDD01*gammaDD12 - gammaDD02*gammaDD11);\n",
-    "           auxevol_gfs[IDX4S(GAMMA_FACEUU11GF, i0,i1,i2)] = tmp6*(gammaDD00*gammaDD22 - ((gammaDD02)*(gammaDD02)));\n",
-    "           auxevol_gfs[IDX4S(GAMMA_FACEUU12GF, i0,i1,i2)] = tmp6*(-gammaDD00*gammaDD12 + gammaDD01*gammaDD02);\n",
-    "           auxevol_gfs[IDX4S(GAMMA_FACEUU22GF, i0,i1,i2)] = tmp6*(gammaDD00*gammaDD11 - ((gammaDD01)*(gammaDD01)));\n",
     "            /*auxevol_gfs[IDX4S(GAMMA_FACEUU00GF, i0,i1,i2)] = FACEVAL[GUPXX];\n",
     "            auxevol_gfs[IDX4S(GAMMA_FACEUU11GF, i0,i1,i2)] = FACEVAL[GUPYY];\n",
     "            auxevol_gfs[IDX4S(GAMMA_FACEUU22GF, i0,i1,i2)] = FACEVAL[GUPZZ];*/\n",
@@ -701,11 +675,11 @@
      "output_type": "stream",
      "text": [
       "Compiling executable...\n",
-      "(EXEC): Executing `gcc -Ofast -fopenmp -march=native -funroll-loops Start-to-Finish-UnitTests/Stilde_flux_UnitTest/Stilde_flux_unit_test.C -o Start-to-Finish-UnitTests/Stilde_flux_UnitTest/output/Stilde_flux_unit_test -lm`...\n",
-      "(BENCH): Finished executing in 0.8054604530334473 seconds.\n",
+      "(EXEC): Executing `gcc -Ofast -fopenmp -march=native -funroll-loops Validation/Stilde_flux_unit_test.C -o Validation/Stilde_flux_unit_test -lm`...\n",
+      "(BENCH): Finished executing in 1.0116524696350098 seconds.\n",
       "Finished compilation.\n",
-      "(EXEC): Executing `taskset -c 0,1,2,3,4,5 ./Stilde_flux_unit_test `...\n",
-      "(BENCH): Finished executing in 0.20377874374389648 seconds.\n"
+      "(EXEC): Executing `taskset -c 0,1,2,3 ./Validation/Stilde_flux_unit_test `...\n",
+      "(BENCH): Finished executing in 0.2095193862915039 seconds.\n"
      ]
     }
    ],
@@ -713,12 +687,9 @@
     "import cmdline_helper as cmd\n",
     "results_file = \"out.txt\"\n",
     "\n",
-    "cmd.C_compile(os.path.join(Ccodesdir,\"Stilde_flux_unit_test.C\"), os.path.join(outdir,\"Stilde_flux_unit_test\"))\n",
+    "cmd.C_compile(os.path.join(out_dir,\"Stilde_flux_unit_test.C\"), os.path.join(out_dir,\"Stilde_flux_unit_test\"))\n",
     "\n",
-    "# Change to output directory\n",
-    "os.chdir(outdir)\n",
-    "\n",
-    "cmd.Execute(os.path.join(\"Stilde_flux_unit_test\"),file_to_redirect_stdout=results_file)\n",
+    "cmd.Execute(os.path.join(out_dir,\"Stilde_flux_unit_test\"),file_to_redirect_stdout=os.path.join(out_dir,results_file))\n",
     "# with open(os.path.join(out_dir,results_file),\"r\") as file:\n",
     "#     for i in range(18):\n",
     "#         output = file.readline()\n",
@@ -759,14 +730,14 @@
      "text": [
       "Now comparing the significant digits of agreements in each direction...\n",
       "SDA in Stilde_rhsD0 = 15.6\n",
-      "SDA in Stilde_rhsD1 = 15.7\n",
+      "SDA in Stilde_rhsD1 = 15.6\n",
       "SDA in Stilde_rhsD2 = 15.8\n"
      ]
     }
    ],
    "source": [
     "print(\"Now comparing the significant digits of agreements in each direction...\")\n",
-    "with open(results_file,\"r\") as file:\n",
+    "with open(os.path.join(out_dir,results_file),\"r\") as file:\n",
     "    output = file.readline()\n",
     "    output = output.split()\n",
     "    for i in range(3):\n",
@@ -812,10 +783,6 @@
    ],
    "source": [
     "import cmdline_helper as cmd    # NRPy+: Multi-platform Python command-line interface\n",
-    "\n",
-    "# Change to NRPy directory\n",
-    "os.chdir(\"../../../\")\n",
-    "\n",
     "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Stilde_flux\",location_of_template_file=os.path.join(\"..\"))"
    ]
   }
