--- a/NRPyPlus_Tutorial.ipynb
+++ b/NRPyPlus_Tutorial.ipynb
@@ -83,7 +83,7 @@
     "+ [ADM initial data for massless scalar field](Tutorial-ADM_Initial_Data-ScalarField) (The initial data is shown to satisfy the constraints at the expected convergence rate [in this tutorial notebook](Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_ScalarField_initial_data.ipynb)) (*Courtesy Leo Werneck*)\n",
     "+ [Massless scalar field energy-momentum tensor](Tutorial-ScalarField_Tmunu.ipynb) (*Courtesy Leo Werneck*)\n",
     "+ [Massless scalar field evolution equations](Tutorial-ScalarField_RHSs.ipynb) (*Courtesy Leo Werneck*)\n",
-    "+ [Start-to-finish example: gravitational collapse of a massless scalar field](Tutorial-Start_to_Finish-BSSNCurvilinear-ScalarField_Collapse) (*Courtesy Leo Werneck*)\n",
+    "+ [Start-to-finish example: gravitational collapse of a massless scalar field](Tutorial-Start_to_Finish-BSSNCurvilinear-ScalarField_Collapse.ipynb) (*Courtesy Leo Werneck*)\n",
     "\n",
     "### PART 3: Solving PDEs in Curvilinear Coordinate Systems\n",
     "+ [Moving beyond Cartesian Grids: Reference Metrics](Tutorial-Reference_Metric.ipynb)\n",
@@ -126,7 +126,7 @@
     "+ **Start-to-Finish curvilinear BSSN simulation examples**:\n",
     "    + [<font color='purple'>**Colliding black holes!**</font>](Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide.ipynb)\n",
     "    + [The \"Hydro without Hydro\" test: evolving the spacetime fields of TOV star with $T^{\\mu\\nu}$ assumed static](Tutorial-Start_to_Finish-BSSNCurvilinear-Neutron_Star-Hydro_without_Hydro.ipynb)\n",
-    "    + [Gravitational collapse of a massless scalar field](Tutorial-Start_to_Finish-BSSNCurvilinear-ScalarField_Collapse) (*Courtesy Leo Werneck*)\n",
+    "    + [Gravitational collapse of a massless scalar field](Tutorial-Start_to_Finish-BSSNCurvilinear-ScalarField_Collapse.ipynb) (*Courtesy Leo Werneck*)\n",
     "\n",
     "### PART 5: Numerical Relativity $-$ General Relativistic Hydrodynamics (GRHD), Force-Free Electrodynamics (GRFFE), & Magnetohydrodynamics (GRMHD)\n",
     "\n",
@@ -137,13 +137,6 @@
     "    + Diagnostic notebook: [<font color='green'>**sbPoynETNRPy**</font>: Evaluating $b^\\mu$ and $S^i$ in the <font color='green'>**Einstein Toolkit**</font>, using HydroBase variables as input](Tutorial-ETK_thorn-u0_smallb_Poynting.ipynb)\n",
     "         + Tutorial notebook: [Computing the 4-Velocity Time-Component $u^0$, the Magnetic Field Measured by a Comoving Observer $b^{\\mu}$, and the Poynting Vector $S^i$](Tutorial-u0_smallb_Poynting-Cartesian.ipynb)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -162,7 +155,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
